# plugin-system-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
crates/host-app/: Cargo.toml
crates/host-app/src/: main.rs
crates/plugin-cli/: Cargo.toml
crates/plugin-cli/src/: main.rs
crates/plugin-greeter/: Cargo.toml
crates/plugin-greeter/src/: lib.rs
crates/plugin-hello/: Cargo.toml
crates/plugin-hello/src/: lib.rs
crates/plugin-interfaces/: Cargo.toml
crates/plugin-interfaces/src/: lib.rs
crates/plugin-macros/: Cargo.toml
crates/plugin-macros/docs/: PLUGIN-MACROS.md
crates/plugin-macros/src/: lib.rs
crates/plugin-system/: Cargo.toml
crates/plugin-system/docs/: PLUGIN-SYSTEM.md
crates/plugin-system/src/: context.rs  error.rs  handler.rs  lib.rs  loader.rs  macros.rs  manager.rs  manifest.rs  platform.rs  plugin_info.rs  registry.rs  traits.rs
crates/plugin-system/tests/: manager_tests.rs  registry_tests.rs
crates/plugin-types/: Cargo.toml
crates/plugin-types/src/: lib.rs
crates/sd-actions/: Cargo.toml
crates/sd-actions/src/: lib.rs
crates/sd-api/: Cargo.toml
crates/sd-api/src/: lib.rs  response.rs  state.rs
crates/sd-api/src/api/: actions.rs  dashboard.rs  dashboard_handlers.rs  devices.rs  helpers.rs  hotkeys.rs  mod.rs  obs.rs  plugins.rs  profiles.rs  router.rs  system.rs  volume.rs  websocket.rs
crates/sd-core/: Cargo.toml
crates/sd-core/src/: main.rs  tray.rs
crates/sd-devices/: Cargo.toml
crates/sd-devices/src/: lib.rs
crates/sd-events/: Cargo.toml
crates/sd-events/src/: lib.rs
crates/sd-plugins/: Cargo.toml
crates/sd-plugins/src/: lib.rs
crates/sd-profiles/: Cargo.toml
crates/sd-profiles/src/: lib.rs
crates/sd-types/: Cargo.toml
crates/sd-types/src/: lib.rs
data/: dashboard.json
docs/: PLUGIN-DOWNCAST-FIX.md  system-plugins.md
plugins/plugin-hotkey/: Cargo.toml
plugins/plugin-hotkey/src/: lib.rs
plugins/plugin-key-simulator/: Cargo.toml
plugins/plugin-key-simulator/src/: lib.rs
plugins/plugin-obs/: Cargo.toml
plugins/plugin-obs/src/: lib.rs  obs_controller.rs
plugins/plugin-system-monitor/: Cargo.toml
plugins/plugin-system-monitor/src/: lib.rs
plugins/plugin-timer/: Cargo.toml
plugins/plugin-timer/src/: lib.rs
plugins/plugin-volume-master/: Cargo.toml
plugins/plugin-volume-master/src/: lib.rs  linux.rs  macos.rs  unsupported.rs  windows.rs
scripts/: release.sh
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.js  App.tsx  main.js  main.tsx  styles.css
web/src/components/: ActionsWidget.tsx  ButtonGridWidget.tsx  ClockWidget.tsx  EventLogWidget.tsx  Icons.tsx  ObsInputsWidget.tsx  ObsScenesWidget.tsx  ObsWidget.tsx  OpenUrlWidget.tsx  QrModal.tsx  QuickActionsWidget.tsx  SendHotkeyWidget.tsx  SystemMonitorWidget.tsx  TypeTextWidget.tsx  VolumeAppsWidget.tsx  VolumeWidget.tsx  WidgetContent.tsx  WidgetGrid.tsx  WidgetLibrary.tsx  WidgetWizard.tsx  widgetHelpers.ts
web/src/lib/: api.js  api.ts  types.ts  websocket.js  websocket.ts  widgetStore.ts
web/src/routes/: Dashboard.js  Dashboard.tsx  Plugins.js  Plugins.tsx  Profiles.js  Profiles.tsx
web/src/styles/: base.css  dashboard.css  library.css  pages.css  theme.css  widgets.css  wizard.css
