[workspace]
members = [
    "crates/plugin-system",
    "crates/plugin-macros",
    "crates/sd-types",
    "crates/sd-events",
    "crates/sd-actions",
    "crates/sd-profiles",
    "crates/sd-devices",
    "crates/sd-api",
    "crates/sd-plugins",
    "crates/sd-core",
    "plugins/plugin-timer",
    "plugins/plugin-system-monitor",
    "plugins/plugin-key-simulator",
    "plugins/plugin-volume-master",
]
resolver = "2"
