[package]
name = "host-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host-app"
path = "src/main.rs"

[dependencies]
plugin-system = { path = "../plugin-system" }
plugin-interfaces = { path = "../plugin-interfaces" }
plugin-types = { path = "../plugin-types" }
log = "0.4"
env_logger = "0.11"
