[package]
name = "sd-plugins-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for building and managing StreamDeck plugins"

[[bin]]
name = "sd-plugins"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.18"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
colored = "2"
which = "6"
notify = "7"
