[package]
name = "plugin-system"
version = "0.1.0"
edition = "2021"

[features]
default = ["file-loader"]
url-loader = ["ureq", "ureq/_tls", "dirs"]
file-loader = []

[dependencies]
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
log = "0.4"
ureq = { version = "3", optional = true, default-features = false }
dirs = { version = "6", optional = true }
plugin-macros = { path = "../plugin-macros" }
semver = "1"

[dev-dependencies]
tempfile = "3"
