[package]
name = "sd-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sd-types = { path = "../sd-types" }
sd-events = { path = "../sd-events" }
sd-actions = { path = "../sd-actions" }
sd-profiles = { path = "../sd-profiles" }
sd-devices = { path = "../sd-devices" }
sd-plugins = { path = "../sd-plugins" }
plugin-obs = { path = "../../plugins/plugin-obs" }
plugin-volume-master = { path = "../../plugins/plugin-volume-master" }
plugin-system-monitor = { path = "../../plugins/plugin-system-monitor" }
plugin-key-simulator = { path = "../../plugins/plugin-key-simulator" }
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
open = "5"
local-ip-address = "0.6"
