[package]
name = "sd-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sd-core"
path = "src/main.rs"

[dependencies]
sd-types = { path = "../sd-types" }
sd-events = { path = "../sd-events" }
sd-actions = { path = "../sd-actions" }
sd-profiles = { path = "../sd-profiles" }
sd-devices = { path = "../sd-devices" }
sd-api = { path = "../sd-api" }
sd-plugins = { path = "../sd-plugins" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
