[package]
name = "sd-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
sd-types = { path = "../sd-types" }
sd-events = { path = "../sd-events" }
sd-actions = { path = "../sd-actions" }
plugin-system = { path = "../plugin-system" }
tokio = { version = "1", features = ["sync"] }
log = "0.4"
