[package]
name = "plugin-obs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
plugin-system = { path = "../../crates/plugin-system" }
obws = { version = "0.15", features = ["events"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
