[package]
name = "plugin-system-monitor"
version = "0.1.0"
edition = "2021"

[features]
default = ["ffi"]
ffi = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
plugin-system = { path = "../../crates/plugin-system" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
