[package]
name = "plugin-volume-master"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
plugin-system = { path = "../../crates/plugin-system" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.30"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_KernelStreaming",
    "Win32_UI_Shell",
] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio_rs = { package = "coreaudio-rs", version = "0.11" }
